<resources>
    <string name="app_name">Sapi_news_2017</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="Logout">Logout</string>
    <string name="abc_search_hint">abc_search_hint</string>
    <string name="facebook_app_id">137126053627713</string>
    <string name="fb_login_protocol_scheme">fb137126053627713</string>
    <string name="profile_string">My profile</string>
    <string name="about_me_string">About me</string>
    <string name="contact_us_string">Contact us</string>

    <!--Email activity data-->
    <string name="EXTRA_EMAIL_SUBJECT">Bug Report</string>
    <string-array name="EXTRA_EMAIL_CONTACTS">
        <item>szabolcscsaholczi@yahoo.com</item>
    </string-array>

    <!--About Us Dialog-->
    <string name="ABOUT_ME_TITLE">About Me</string>
    <string name="ABOUT_ME_MSG">This app was written by  Csaholczi Szabolcs ! :D</string>
    <string name="ok_button">OK</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


</resources>
